<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tip_calc.app.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/etNum"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:hint="@string/et_label"
        android:inputType="numberDecimal" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten"
        android:id="@+id/btn10"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/etNum"
        android:layout_alignStart="@+id/etNum"
        android:onClick="on10" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifteen"
        android:id="@+id/btn15"
        android:layout_alignTop="@+id/btn10"
        android:layout_centerHorizontal="true"
        android:onClick="on15" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twenty"
        android:id="@+id/btn20"
        android:layout_alignTop="@+id/btn15"
        android:layout_alignRight="@+id/etNum"
        android:layout_alignEnd="@+id/etNum"
        android:onClick="on20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tip_label"
        android:id="@+id/tip_label"
        android:layout_marginBottom="41dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btn10"
        android:layout_alignEnd="@+id/btn10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/amtView"
        android:layout_alignTop="@+id/tip_label"
        android:layout_toLeftOf="@+id/btn20"
        android:singleLine="false"
        android:text="@string/amount_label" />

</RelativeLayout>
